@@ -2,8 +2,11 @@ Wed Oct 13 17:51:17 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Merge patches from Ben Collins <bcollins@debian.org>:
     + fix windowresizing in dselect
-    + when upgrading check if a file is not also in the new package before removing
-	  it, so we don't remove new files due to symlinks confusing us
+    + when upgrading check if a file is not also in the new package before
+	  removing it, so we don't remove new files due to symlinks confusing us
+    + fix logic error in checkforremoval: it was breaking cycles in for the
+      wrong package
+    + fix findbreakcycle to remove cycles even for packages we are not changing
 
 Tue Oct 12 17:15:08 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
